--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: 'pirate';
+  src: url('/jack-pirate.ttf') format('truetype');
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,6 +16,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-pirate: 'pirate', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
